--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -23,6 +23,11 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>org.twitter4j</groupId>
+    <artifactId>twitter4j-stream</artifactId>
+    <version>4.0.7</version>
+</dependency>
   </dependencies>
 
   <build>
